--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -49,7 +50,9 @@ android {
 
 dependencies {
 
+    implementation 'androidx.room:room-ktx:2.5.0'
     implementation 'androidx.core:core-ktx:1.7.0'
+    kapt 'androidx.room:room-compiler:2.5.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
