--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         tools:targetApi="31" >
         <activity
             android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_main"
+            android:exported="true"
             android:theme="@style/Theme.AppPrototype1" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
