Correct click, fake Cocktail Activity, fixed layout, everything Ok

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,20 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
-            android:theme="@style/Theme.AppPrototype1"
-                android:name=".MainActivity"
+            android:name=".MainActivity2"
+            android:exported="false"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/Theme.AppPrototype1.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true"
-           >
+            android:theme="@style/Theme.AppPrototype1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
+
 </manifest>
