--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".CockSreen"
+            android:exported="false"
+            android:theme="@style/Theme.AppPrototype1.NoActionBar"/>
         <activity
             android:name=".MainActivity2"
             android:exported="false"
@@ -18,7 +22,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppPrototype1">
+            android:theme="@style/Theme.AppPrototype1" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
