--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App.Starting"
         tools:targetApi="31">
-
         <activity
-            android:name=".CockSreen"
+            android:name=".CocktailScreenActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppPrototype1.NoActionBar" />
+        <activity
+            android:name=".AddCocktailActivity"
+            android:label="Add Cocktail"
             android:exported="false"
             android:theme="@style/Theme.AppPrototype1.NoActionBar" />
         <activity
