--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,24 @@
         android:theme="@style/Theme.App.Starting"
         tools:targetApi="31">
         <activity
+            android:name=".AddIngredientActivity"
+            android:exported="false"
+            android:label="Add Ingredient"
+            android:theme="@style/Theme.AppPrototype1.NoActionBar"/>
+        <activity
+            android:name=".IngredientScreenActivity"
+            android:exported="false"
+            android:label="@string/title_activity_ingredient"
+            android:theme="@style/Theme.AppPrototype1.NoActionBar" />
+        <activity
             android:name=".CocktailScreenActivity"
             android:exported="false"
+            android:label="@string/cocktail"
             android:theme="@style/Theme.AppPrototype1.NoActionBar" />
         <activity
             android:name=".AddCocktailActivity"
-            android:label="Add Cocktail"
             android:exported="false"
+            android:label="Add Cocktail"
             android:theme="@style/Theme.AppPrototype1.NoActionBar" />
         <activity
             android:name=".MainActivity"
